[package]
name = 'pallet-checked-inflation'
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'FRAME pallet to IP staking'
edition = '2018'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {workspace = true}
scale-info = {workspace = true}
serde = {workspace = true, optional = true}

frame-support = {workspace = true}
frame-system = {workspace = true}
num-traits = {workspace = true}
pallet-session = {workspace = true}
sp-arithmetic = {workspace = true}
sp-core = {workspace = true}
sp-io = {workspace = true}
sp-runtime = {workspace = true}
sp-staking = {workspace = true}
sp-std = {workspace = true}

frame-benchmarking = {workspace = true, optional = true}

[dev-dependencies]
pallet-balances = {workspace = true}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"num-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"sp-staking/std",
  "pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
