[package]
name = 'pallet-rings'
authors = ['InvArchitects <https://github.com/InvArch>']
description = ''
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Frames/'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = {workspace = true, default-features = false}
codec = {workspace = true, default-features = false}
scale-info = {workspace = true, default-features = false}
serde = {workspace = true, optional = true}

frame-support = {workspace = true, default-features = false}
frame-system = {workspace = true, default-features = false}
num-traits = {workspace = true, default-features = false}
pallet-balances = {workspace = true, default-features = false}
pallet-session = {workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false, optional = true }
sp-arithmetic = {workspace = true, default-features = false}
sp-core = {workspace = true, default-features = false}
sp-io = {workspace = true, default-features = false}
sp-runtime = {workspace = true}
sp-staking = {workspace = true}
sp-std = {workspace = true}

pallet-inv4 = { path = "../INV4/pallet-inv4", default-features = false }

pallet-xcm = {workspace = true, default-features = false}
xcm = {workspace = true, default-features = false}
xcm-executor = {workspace = true, default-features = false}

frame-benchmarking = {workspace = true, default-features = false, optional = true}

[dev-dependencies]
orml-traits = { workspace = true, default-features = false}
orml-traits2 = { workspace = true, default-features = false}
orml-tokens = { workspace = true, default-features = false}
orml-tokens2 = { workspace = true, default-features = false}
orml-asset-registry = { workspace = true, default-features = false}
xcm-builder = {workspace = true, default-features = false}


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"num-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"sp-staking/std",
  "pallet-inv4/std",
  "pallet-xcm/std",
  "xcm/std",
  "orml-traits2/std",
  "orml-traits/std",
  "orml-tokens/std",
  "orml-tokens2/std",
  "orml-asset-registry/std",
  "xcm-builder/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
