[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'InvArch primitives for InvArchh Pallet Library'
edition = '2018'
homepage = 'https://invarch.io'
license = 'GPLv3'
name = 'invarch-primitives'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/ipt'
version = '0.1.0-dev'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", default-features = false }
scale-info = { version = "1.0.0", features = ["derive"], default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-core/std",
    "frame-system/std",
    "sp-std/std",
    "scale-info/std",
    "sp-io/std"
]