[package]
name = 'invarch-primitives'
version = '0.1.0-dev'
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'InvArch primitives for InvArchh Pallet Library'
homepage = 'https://invarch.network'
edition = '2021'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/ipt'


[dependencies]
serde = { version = "1.0.132", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate",  default-features = false, branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-core/std",
    "frame-system/std",
    "sp-std/std",
    "scale-info/std",
    "sp-io/std"
]