[package]
name = 'invarch-primitives'
version = '0.1.0-dev'
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'InvArch primitives for InvArchh Pallet Library'
homepage = 'https://invarch.network'
edition = '2021'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/ipt'


[dependencies]
serde = { workspace = true, optional = true }
codec = {workspace = true}
scale-info = {workspace = true}

frame-system = {workspace = true}
sp-core = {workspace = true}
sp-runtime = {workspace = true}
sp-std = {workspace = true}
sp-io = {workspace = true}


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-core/std",
    "frame-system/std",
    "sp-std/std",
    "scale-info/std",
    "sp-io/std"
]
